--- a/app/src/main/res/layout/activity_brand_login.xml
+++ b/app/src/main/res/layout/activity_brand_login.xml
@@ -123,7 +123,23 @@
                 android:textSize="20dip"
                 android:textColor="#ffffff"
                 android:enabled="true"
-                android:autoLink="web"
+                android:clickable="true"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <!--Link back to home page-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/link_to_home"
+                android:layout_marginTop="20dp"
+                android:text="I am an Influencer"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:textSize="20dp"
+                android:textColor="#ffffff"
+                android:enabled="true"
                 android:clickable="true"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
