--- a/app/src/main/res/layout/fragment_brand_campaign.xml
+++ b/app/src/main/res/layout/fragment_brand_campaign.xml
@@ -1,15 +1,35 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     tools:context="com.sap.josh0207.sap2016.fragment.BrandCampaignFragment">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="123"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:gravity="bottom"/>
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ListView
+                android:id="@+id/campaign_listView"
+                android:layout_width="match_parent"
+                android:layout_height="460dp" />
+
+            <com.google.android.gms.ads.AdView
+                android:layout_marginTop="10dp"
+                android:id="@+id/adView"
+                android:layout_width="281dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/banner_ad_unit_id1"
+                android:layout_gravity="center">
+            </com.google.android.gms.ads.AdView>
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
