--- a/app/src/main/res/layout/fragment_brand_settings.xml
+++ b/app/src/main/res/layout/fragment_brand_settings.xml
@@ -6,26 +6,6 @@
     tools:context="com.sap.josh0207.sap2016.fragment.BrandNotificationsFragment">
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="115dp">
-
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="513dp"
-                android:id="@+id/setting_listView">
-
-            </ListView>
-            </LinearLayout>
-    </ScrollView>
-
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="115dp"
@@ -98,6 +78,27 @@
             android:layout_marginLeft="235dp"/>
 
     </FrameLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="115dp">
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="513dp"
+                android:id="@+id/setting_listView">
+            </ListView>
+            </LinearLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
