--- a/app/src/main/res/layout/fragment_brand_campaign.xml
+++ b/app/src/main/res/layout/fragment_brand_campaign.xml
@@ -21,8 +21,8 @@
 
             <com.google.android.gms.ads.AdView
                 android:layout_marginTop="10dp"
-                android:id="@+id/adView"
-                android:layout_width="281dp"
+                android:id="@+id/adView1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
