--- a/app/src/main/res/layout/fragment_inf_campaign.xml
+++ b/app/src/main/res/layout/fragment_inf_campaign.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    tools:context="com.sap.josh0207.sap2016.fragment.BrandCampaignFragment">
+    tools:context="com.sap.josh0207.sap2016.fragment.InfCampaignFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
             android:orientation="vertical">
 
             <ListView
-                android:id="@+id/inf_campaign_listView"
+                android:id="@+id/campaign_listView"
                 android:layout_width="match_parent"
                 android:layout_height="460dp" />
 
@@ -32,4 +32,5 @@
             </com.google.android.gms.ads.AdView>
         </LinearLayout>
     </ScrollView>
+
 </RelativeLayout>
