--- a/app/src/main/res/layout/activity_brand_login.xml
+++ b/app/src/main/res/layout/activity_brand_login.xml
@@ -134,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/link_to_home"
                 android:layout_marginTop="20dp"
-                android:text="I am an Influencer"
+                android:text="@string/btn_back"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:textSize="20dp"
