--- a/app/src/main/res/menu/activity_inf_home_drawer.xml
+++ b/app/src/main/res/menu/activity_inf_home_drawer.xml
@@ -3,25 +3,37 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:title="Import" />
+            android:id="@+id/nav_InfMyCampaign"
+            android:icon="@drawable/ic_home"
+            android:title="@string/nav_MyCampaign" />
         <item
-            android:id="@+id/nav_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_InfNotifications"
+            android:icon="@drawable/ic_notification"
+            android:title="@string/nav_notifications" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_InfSettings"
+            android:icon="@drawable/ic_settings"
+            android:title="@string/nav_settings" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Other">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:title="Share" />
+                android:id="@+id/nav_FAQ"
+                android:icon="@drawable/ic_faq"
+                android:title="@string/activity_title_faq" />
             <item
-                android:id="@+id/nav_send"
-                android:title="Send" />
+                android:id="@+id/nav_PrivacyPolicy"
+                android:icon="@drawable/ic_private"
+                android:title="@string/privacy_policy" />
+            <item
+                android:id="@+id/nav_ContactUs"
+                android:icon="@drawable/ic_contact"
+                android:title="@string/activity_title_contact_us" />
+            <item
+                android:id="@+id/nav_AboutUs"
+                android:icon="@drawable/ic_about"
+                android:title="@string/nav_about_us" />
         </menu>
     </item>
-
 </menu>
