--- a/app/src/main/res/layout/nav_header_inf_home.xml
+++ b/app/src/main/res/layout/nav_header_inf_home.xml
@@ -18,22 +18,16 @@
         <ImageView
             android:id="@+id/inf_img_profile"
             android:layout_width="75dp"
-            android:layout_height="@dimen/profile_height"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            android:layout_height="75dp"
+            android:paddingTop="8dp"
             app:srcCompat="@drawable/user_profile_default"
             android:cropToPadding="true" />
 
         <TextView
             android:id="@+id/tv_InfName"
-            android:layout_width="match_parent"
+            android:layout_width="333dp"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            android:paddingTop="12dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-        <TextView
-            android:id="@+id/tv_InfEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
     </LinearLayout>
 </RelativeLayout>
