--- a/app/src/main/res/layout/fragment_brand_settings.xml
+++ b/app/src/main/res/layout/fragment_brand_settings.xml
@@ -79,6 +79,7 @@
 
         <LinearLayout
             android:orientation="vertical"
+            android:id="@+id/BrandSettings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true">
