--- a/app/src/main/res/menu/menu_brand_detail.xml
+++ b/app/src/main/res/menu/menu_brand_detail.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/miCompose"
-        android:icon="@drawable/ic_add"
+        android:icon="@drawable/ic_save"
         app:showAsAction="always"
         android:title="Save">
     </item>
