--- a/app/src/main/res/layout/activity_add_campaign.xml
+++ b/app/src/main/res/layout/activity_add_campaign.xml
@@ -34,14 +34,14 @@
            android:textColor="#000"
            android:textSize="18dp" />
 
-           <ImageButton
-               android:layout_width="match_parent"
-               android:layout_height="290dp"
-               app:srcCompat="@drawable/btn_add_image"
-               android:id="@+id/btn_logo_image"
-               android:scaleType="centerCrop"/>
+          <ImageButton
+              android:layout_width="match_parent"
+              android:layout_height="290dp"
+              app:srcCompat="@drawable/btn_add_image"
+              android:scaleType="centerCrop"
+              android:id="@+id/btn_hero_image" />
 
-           <TextView
+          <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
                android:layout_width="match_parent"
                android:layout_height="290dp"
                app:srcCompat="@drawable/btn_add_image"
-               android:id="@+id/btn_hero_image"
+               android:id="@+id/btn_logo_image"
                android:scaleType="centerCrop"/>
 
            <TextView
@@ -123,8 +123,7 @@
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:id="@+id/category_spinner"
-               android:background="@drawable/et_shape_black"/>
+               android:id="@+id/category_spinner" />
 
            <TextView
                android:layout_marginTop="10dp"
