--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary"></item>
+        <item name="colorPrimary">#A59Dff</item>
         <item name="colorPrimaryDark">#BCB6FF</item>
         <item name="colorAccent">#696969</item>
         <item name="windowActionBar">false</item>
