--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -15,4 +15,10 @@
         app:titleTextColor="@android:color/white"
         android:background="?attr/colorPrimary">
     </android.support.v7.widget.Toolbar>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/campaign_list1"></android.support.v7.widget.RecyclerView>
 </RelativeLayout>
