--- a/app/src/main/res/layout/campaign_row.xml
+++ b/app/src/main/res/layout/campaign_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -24,9 +25,12 @@
             android:id="@+id/campaign_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:src="@android:drawable/stat_notify_sync_noanim"
             android:scaleType="centerCrop"
-            android:adjustViewBounds="true" />
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/image"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+        </ImageView>
 
         <TextView
             android:id="@+id/campaign_desc"
