--- a/app/src/main/res/layout/fragment_brand_campaign.xml
+++ b/app/src/main/res/layout/fragment_brand_campaign.xml
@@ -1,12 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    tools:context="com.sap.josh0207.sap2016.fragment.BrandCampaignFragment">
+    tools:context="com.sap.josh0207.sap2016.fragment.BrandCampaignFragment"
+    android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/campaign_list"></android.support.v7.widget.RecyclerView>
-</RelativeLayout>
+</LinearLayout>
