--- a/app/src/main/res/layout/activity_icampaign_detail.xml
+++ b/app/src/main/res/layout/activity_icampaign_detail.xml
@@ -2,12 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_bcampaign_detail"
+    android:id="@+id/activity_icampaign_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sap.josh0207.sap2016.BCampaignDetailActivity"
-    android:orientation="vertical">
-
+    tools:context="com.sap.josh0207.sap2016.ICampaignDetailActivity">
     <android.support.v7.widget.Toolbar
         android:id="@+id/campaign_detail_toolbar"
         android:minHeight="?attr/actionBarSize"
@@ -20,9 +18,10 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
         android:paddingRight="5dp"
-        android:paddingLeft="5dp">
+        android:paddingLeft="5dp"
+        android:layout_below="@+id/campaign_detail_toolbar"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,15 +60,13 @@
                 android:text="Objective"
                 android:enabled="true" />
 
-            <EditText
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/et_objective"
                 android:textColor="#000"
                 android:textSize="16dp"
-                android:layout_marginTop="5dp"
-                android:enabled="true"
-                android:editable="true" />
+                android:layout_marginTop="5dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -80,12 +77,11 @@
                 android:layout_marginTop="10dp"
                 android:text="Description"/>
 
-            <EditText
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/Desc"
-                android:enabled="true"
-                android:editable="true" />
+                android:enabled="true" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -96,7 +92,7 @@
                 android:layout_marginTop="10dp"
                 android:text="Content We'D Love From You"/>
 
-            <EditText
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/Content"
@@ -139,7 +135,7 @@
                 android:layout_marginTop="10dp"
                 android:text="Term And Condition for Post"/>
 
-            <EditText
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/et_tc"
@@ -154,7 +150,7 @@
                 android:layout_marginTop="10dp"
                 android:text="Where To Get Product"/>
 
-            <EditText
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/et_getProduct"
@@ -180,22 +176,21 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Save Edit Detail"
+                android:text="Create Post"
                 android:textColor="#000"
                 android:textSize="16dp"
-                android:id="@+id/btn_Edit"/>
+                android:id="@+id/btn_Create"/>
 
             <Button
                 android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Close Campaign"
+                android:text="Report Campaign"
                 android:textColor="#000"
                 android:textSize="16dp"
-                android:id="@+id/btn_Close"/>
+                android:id="@+id/btn_Report"/>
 
         </LinearLayout>
     </ScrollView>
-
 
 </RelativeLayout>
