--- a/app/src/main/res/layout/fragment_inf_campaign.xml
+++ b/app/src/main/res/layout/fragment_inf_campaign.xml
@@ -1,36 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    tools:context="com.sap.josh0207.sap2016.fragment.InfCampaignFragment">
+    tools:context="com.sap.josh0207.sap2016.fragment.InfCampaignFragment"
+    android:orientation="vertical">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+        <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:id="@+id/spinner_category" />
+    </RelativeLayout>
 
-            <ListView
-                android:id="@+id/campaign_listView"
-                android:layout_width="match_parent"
-                android:layout_height="460dp" />
 
-            <com.google.android.gms.ads.AdView
-                android:layout_marginTop="10dp"
-                android:id="@+id/adView1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentBottom="true"
-                ads:adSize="BANNER"
-                ads:adUnitId="@string/banner_ad_unit_id1"
-                android:layout_gravity="center">
-            </com.google.android.gms.ads.AdView>
-        </LinearLayout>
-    </ScrollView>
-
-</RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/icampaign_list"></android.support.v7.widget.RecyclerView>
+</LinearLayout>
