--- a/app/src/main/res/menu/activity_brand__home__drawer.xml
+++ b/app/src/main/res/menu/activity_brand__home__drawer.xml
@@ -7,6 +7,9 @@
             android:icon="@drawable/ic_home"
             android:title="@string/nav_MyCampaign" />
         <item
+            android:id="@+id/nav_BrandProposal"
+            android:title="@string/nav_Proposal" />
+        <item
             android:id="@+id/nav_BrandNotifications"
             android:icon="@drawable/ic_notification"
             android:title="@string/nav_notifications" />
