--- a/app/src/main/res/layout/activity_proposal_post.xml
+++ b/app/src/main/res/layout/activity_proposal_post.xml
@@ -61,9 +61,11 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
                 android:textColor="#000"
                 android:textSize="16dp"
                 android:id="@+id/price"/>
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
