--- a/app/src/main/res/layout/fragment_brand_proposal_list.xml
+++ b/app/src/main/res/layout/fragment_brand_proposal_list.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sap.josh0207.sap2016.ProposalListFragment"
+    tools:context="com.sap.josh0207.sap2016.fragment.BrandProposalListFragment"
     android:orientation="vertical">
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -18,5 +18,5 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/icampaign_list"></android.support.v7.widget.RecyclerView>
+        android:id="@+id/bProposal_list"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
